# FreeCAD

./: CLAUDE.md  CMakeLists.txt
ruphobia/: CMakeLists.txt  dimensionitem.cpp  dimensionitem.h  increment_build.cmake  main.cpp  occtview.cpp  occtview.h  resources.qrc  sketchview.cpp  sketchview.h  version.h.in
src/App/: Application.cpp  Application.h  ApplicationDirectories.cpp  AutoTransaction.cpp  CMakeLists.txt  ComplexGeoData.cpp  Datums.cpp  Datums.h  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  Expression.cpp  Expression.h  ExpressionParser.h  Extension.cpp  Extension.h  FeatureTest.cpp  FeatureTest.h  GeoFeature.cpp  GeoFeature.h  GeoFeatureGroupExtension.cpp  GeoFeatureGroupExtension.h  GroupExtension.cpp  GroupExtension.h  InventorObject.cpp  InventorObject.h  Link.cpp  Link.h  MaterialObject.cpp  MaterialObject.h  MeasureManager.cpp  MeasureManager.h  ObjectIdentifier.cpp  ObjectIdentifier.h  OriginGroupExtension.cpp  (+25 more)
src/App/private/: DocumentP.h
src/Base/: BaseClass.cpp  BaseClass.h  CMakeLists.txt  Console.cpp  Console.h  ConsoleObserver.cpp  Exception.cpp  Exception.h  ExceptionFactory.cpp  ExceptionFactory.h  Interpreter.cpp  Interpreter.h  PreCompiled.h  Stream.cpp  Stream.h  Tools.cpp  Translate.cpp  Translate.h  UnitsApi.cpp  UnitsApi.h
src/Gui/: Action.cpp  Application.cpp  CMakeLists.txt  Command.cpp  CommandDoc.cpp  Document.cpp  Document.h  EditorView.cpp  ExpressionCompleter.cpp  FileHandler.cpp  GuiApplication.h  MDIView.cpp  MDIView.h  MDIViewPyWrap.h  Macro.cpp  MainWindow.cpp  NaviCube.h  OnlineDocumentation.h  ReportView.cpp  SplitView3DInventor.cpp  SplitView3DInventor.h  StartupProcess.cpp  UiLoader.h  View3DInventor.cpp  View3DInventor.h  View3DInventorViewer.cpp  View3DInventorViewer.h  ViewProvider.cpp  ViewProvider.h  ViewProviderDocumentObject.cpp  ViewProviderDocumentObject.h  ViewProviderDocumentObjectGroup.cpp  ViewProviderExtension.cpp  ViewProviderGeoFeatureGroup.cpp  ViewProviderGeoFeatureGroup.h  ViewProviderGeoFeatureGroupExtension.cpp  ViewProviderGeometryObject.cpp  ViewProviderGeometryObject.h  ViewProviderGroupExtension.cpp  ViewProviderGroupExtension.h  (+13 more)
src/Gui/Navigation/: NavigationStyle.cpp  NavigationStyle.h
src/Gui/Selection/: Selection.cpp  Selection.h  SelectionFilter.h  SelectionObject.cpp  SelectionObject.h
src/Main/: CMakeLists.txt  MainCmd.cpp  MainGui.cpp
src/Mod/Assembly/: CommandCreatePartFromFace.py  CommandInsertNewPart.py  InitGui.py
src/Mod/Start/Gui/: AppStartGui.cpp
